build process optimized, examples for x86 added.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,14 +3,15 @@ include_directories("../include")
 include_directories("../include")
 
 set(SRC
-	Trajectory.cpp
-	Problem.cpp
-	ODESolver.cpp
+	test01.cpp
 )
 
 
-add_library(inumerics ${SRC})
 
 
-install (TARGETS inumerics DESTINATION .)
+add_executable( test01 ${SRC})
+
+TARGET_LINK_LIBRARIES(test01 inumerics)
+
+install (TARGETS test01 DESTINATION ./examples/)
 install (DIRECTORY "../include" DESTINATION .)
