problem class changed: - class is abstract - no external rhs function required anymore - user must provide custom rhs operator

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,8 +7,11 @@ endif()
 
 
 add_executable( test01 test01.cpp)
-
 TARGET_LINK_LIBRARIES(test01 inumerics)
 
+add_executable( test02 test02.cpp)
+TARGET_LINK_LIBRARIES(test02 inumerics)
+
 install (TARGETS test01 DESTINATION ./examples/)
+install (TARGETS test02 DESTINATION ./examples/)
 install (DIRECTORY "../include" DESTINATION .)
