classes restructured: - moved tempalte specializations to cpp files (we need compiled lib anyway)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,10 @@ set(SRC
 	Problem.cpp
 	ODESolver.cpp
         Interpolation.cpp
+        inbyte.cpp
+        invector.cpp
+        inmatrix.cpp
+        inbaseobject.cpp
 )
 
 
